# teamy

./: .env.example  .gitignore  CLAUDE.md  README.md  nuxt.config.ts  package.json  vitest.config.ts
.claude/agents/: docs.md  graph-api.md  rust-dev.md  test-writer.md  ui-designer.md  vue-dev.md
app/composables/: useAuth.ts  useChannels.ts  useChatHelpers.ts  useChats.ts  useClaude.ts  useClaudeTools.ts  useCreateChat.ts  useCurrentUser.ts  useGraph.ts  useGraphToken.ts  useMessages.ts  useMockChannels.ts  useMockChats.ts  useMockMessages.ts  useMockPresence.ts  usePlugins.ts  usePresence.ts  useSearch.ts  useSections.ts  useSendMessage.ts  useTauri.ts  useUnread.ts  useUnreadPoller.ts  useUnreadStore.ts
app/middleware/: auth.global.ts
app/pages/: index.vue  login.vue
app/plugins/: msal.client.ts  plugins.client.ts  tauriNavigate.client.ts
app/stores/: channel.ts  chat.ts  plugin.ts
app/utils/: buildMessagePayload.ts  msalConfig.ts  replaceEmoticons.ts
docs/: teamy-init.md
plugins/message-translator/: index.ts
plugins/notification-filter/: index.ts
plugins/unread-summarizer/: index.ts
server/middleware/: graph-auth.ts
server/plugins/: auth-session-fix.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/commands/: auth.rs  claude.rs  deeplink.rs  filesystem.rs  keychain.rs  mod.rs  notifications.rs
test/: setup.ts
test/composables/: useUnreadPoller.test.ts  (+1 more)
types/: claude.ts  graph.ts  plugin.ts  sections.ts  unread.ts
(+17 files in other folders)
