[package]
name = "teamy"
version = "0.1.0"
description = "A lightweight Microsoft Teams chat client for macOS"
authors = ["you"]
edition = "2021"

[lib]
name = "teamy_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
urlencoding = "2"
security-framework = "3"
tauri-plugin-store = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
url = "2"
regex = "1"
